Add minify css & js

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo Yoyo Popup</title>
-    <link rel="stylesheet" href="yoyo-popup.css">
+    <link rel="stylesheet" href="yoyo-popup.min.css">
 </head>
 <body>
     <button id="successBtn">Trigger Yoyo Popup (Success, 3 sec)</button>
@@ -12,7 +12,7 @@
     <button id="infoBtn">Trigger Yoyo Popup (Info)</button>
     <button id="warningBtn">Trigger Yoyo Popup (Warning)</button>
     <button id="questionBtn">Trigger Yoyo Popup (Question)</button>
-    <script src="yoyo-popup.js"></script>
+    <script src="yoyo-popup.min.js"></script>
 </body>
 <script>
     document.getElementById('successBtn').onclick = function () {
