--- a/index.html
+++ b/index.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo Yoyo Popup</title>
+
+    <!-- <link rel="stylesheet" href="yoyo-popup.css"> -->
     <link rel="stylesheet" href="yoyo-popup.min.css">
+
+    <style>
+        .icon {
+            font-size: 50px;
+            transform: translateY(0);
+            transition: transform 0.5s ease;
+        }
+
+        .icon.bounce {
+            transform: translateY(-30px);
+        }
+    </style>
 </head>
+
 <body>
     <button id="successBtn">Trigger Yoyo Popup (Success, 5 sec)</button>
     <button id="dangerBtn">Trigger Yoyo Popup (Danger, Static)</button>
     <button id="infoBtn">Trigger Yoyo Popup (Info)</button>
     <button id="warningBtn">Trigger Yoyo Popup (Warning)</button>
     <button id="questionBtn">Trigger Yoyo Popup (Question)</button>
+
+    <!-- <script src="yoyo-popup.js"></script> -->
     <script src="yoyo-popup.min.js"></script>
 </body>
 <script>
