--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo Yoyo Popup</title>
 
-    <!-- <link rel="stylesheet" href="yoyo-popup.css"> -->
-    <link rel="stylesheet" href="yoyo-popup.min.css">
+    <link rel="stylesheet" href="yoyo-popup.css">
+    <!-- <link rel="stylesheet" href="yoyo-popup.min.css"> -->
 
     <style>
         .icon {
@@ -29,8 +29,8 @@
     <button id="warningBtn">Trigger Yoyo Popup (Warning)</button>
     <button id="questionBtn">Trigger Yoyo Popup (Question)</button>
 
-    <!-- <script src="yoyo-popup.js"></script> -->
-    <script src="yoyo-popup.min.js"></script>
+    <script src="yoyo-popup.js"></script>
+    <!-- <script src="yoyo-popup.min.js"></script> -->
 </body>
 <script>
     document.getElementById('successBtn').onclick = function () {
