Arial Font Family, update readme images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body>
+<body style="font-family: Arial, sans-serif;">
     <h1>Demo Yoyo Popup 1.0.1</h1>
     <p style="font-size:1.5rem;">
         <a href="https://github.com/smallvi/yoyo_popup" target="_blank" style="text-decoration: none; ">
@@ -21,7 +21,7 @@
             </svg> Github
         </a>
     </p>
-    <hr>
+    
     <div style="margin-top: 1.5rem;">
         <button id="successBtn">Trigger Yoyo Popup (Success, 5 sec)</button>
         <button id="dangerBtn">Trigger Yoyo Popup (Danger, Static)</button>
