fix: fix body center issue

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         </p>
         
         <div style="margin-top: 1.5rem;">
-            <button class="button" id="successBtn" >Yoyo Popup (Success, 5 sec)</button>
-            <button class="button" id="dangerBtn">Yoyo Popup (Danger, Static)</button>
-            <button class="button" id="infoBtn">Yoyo Popup (Info)</button>
-            <button class="button" id="warningBtn">Yoyo Popup (Warning)</button>
-            <button class="button" id="questionBtn">Yoyo Popup (Question)</button>
+            <button class="button" id="successBtn" >Success, 5 sec</button>
+            <button class="button" id="dangerBtn">Danger, Static</button>
+            <button class="button" id="infoBtn">Info</button>
+            <button class="button" id="warningBtn">Warning</button>
+            <button class="button" id="questionBtn">Question</button>
         </div>
 
         <div>
-            <img src="images/Simple-Yoyo-Popup.png" style="max-width: 50%;">
+            <img src="images/Simple-Yoyo-Popup.png" style="width:600px;">
         </div>
     </div>
     
