chore: amend name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body style="font-family: Arial, sans-serif;">
     <div class="container">
-        <h1>Demo Yoyo Popup 1.0.1</h1>
+        <h1>Yoyo Popup</h1>
         <img src="./images/yoyo_popup.png" style="width:350px;">
         <button class="github-btn" style="margin-bottom: 50px;">
             <a href="https://github.com/smallvi/yoyo_popup" target="_blank" class="github-link"
