--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </a>
         </button>
 
-        <div>
+        <div style="margin: 50px 10px;">
             <button class="button" id="successBtn">Success, 5 sec</button>
             <button class="button" id="dangerBtn">Danger, Static</button>
             <button class="button" id="infoBtn">Info</button>
@@ -32,7 +32,7 @@
             <button class="button" id="questionBtn">Question</button>
         </div>
 
-        <div style="margin-bottom: 60px; width: 350px;margin: 0 auto 60px auto;">
+        <div style="width: 350px; margin: 0 auto 60px auto;padding: 20px;">
             <div class="browser_container">
                 <div class="browser_top">
                     <span class="browser_dot"></span>
@@ -52,7 +52,7 @@
 
             </div>
         </div>
-        <div style="margin-bottom: 60px;">
+        <div style="margin-bottom: 60px;padding: 20px;">
             <div class="browser_container" style="margin:auto;">
                 <div class="browser_top">
                     <span class="browser_dot"></span>
