chore: add icon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo Yoyo Popup</title>
+    <title>Yoyo Popup</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/icon/favicon-16x16.png">
+    <link rel="manifest" href="./images/icon/site.webmanifest">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -117,7 +123,8 @@
                     </p>
 
                     <p class="browser_inline"><span class="browser_function_color">closeFunction</span><span
-                            class="browser_symbol_color">:</span> () => <span class="browser_function_color">alert</span>(<span class="browser_value_color">'You
+                            class="browser_symbol_color">:</span> () => <span
+                            class="browser_function_color">alert</span>(<span class="browser_value_color">'You
                             click Close'</span>)<span class="browser_symbol_color">,</span>
                     </p>
 
