chore: add footer, change mascot

--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
 
             </div>
         </div>
+
+        <footer style="padding: 50px;color: white;">© 2024 Zi Wei Yeo</footer>
     </div>
 
     <script src="yoyo-popup.min.js"></script>
