style: update responsive

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </a>
         </button>
 
-        <div style="margin: 50px 10px;">
+        <div class="buttons" style="margin: 50px 10px;">
             <button class="button" id="successBtn">Success, 5 sec</button>
             <button class="button" id="dangerBtn">Danger, Static</button>
             <button class="button" id="infoBtn">Info</button>
@@ -47,8 +47,8 @@
             <button class="button" id="questionBtn">Question</button>
         </div>
 
-        <div style="width: 350px; margin: 0 auto 60px auto;padding: 20px;">
-            <div class="browser_container">
+        <div style="margin: 0 auto 60px auto;padding: 20px;">
+            <div class="browser_container browser_simple">
                 <div class="browser_top">
                     <span class="browser_dot"></span>
                     <span class="browser_dot"></span>
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div style="margin-bottom: 60px;padding: 20px;">
-            <div class="browser_container" style="margin:auto;">
+            <div class="browser_container browser_advance">
                 <div class="browser_top">
                     <span class="browser_dot"></span>
                     <span class="browser_dot"></span>
