chore: add meta, robots, sitemap

--- a/index.html
+++ b/index.html
@@ -11,6 +11,30 @@
 
         gtag('config', 'G-79XVK7GNT8');
     </script>
+
+    <meta name="keywords" content="Toast, Popup, Tooltip, Laravel">
+    <meta name="description"
+        content="Yoyo Popup is a customizable alert popup plugin that works without any dependencies. It's designed to be easy to use and highly customizable, allowing you to create stylish and functional alert popups for your website or application.">
+    <meta name="author" content="Zi Wei Yeo">
+
+    <meta property="og:title" content="Yoyo Popup">
+    <meta property="og:description"
+        content="Yoyo Popup is a customizable alert popup plugin that works without any dependencies. It's designed to be easy to use and highly customizable, allowing you to create stylish and functional alert popups for your website or application.">
+    <meta property="og:image" content="https://github.com/smallvi/yoyoPopup/raw/main/images/yoyo_popup_banner.png">
+    <meta property="og:url" content="https://smallvi.github.io/yoyoPopup/">
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Yoyo Popup">
+
+    <meta name="twitter:title" content="Yoyo Popup">
+    <meta name="twitter:description"
+        content="Yoyo Popup is a customizable alert popup plugin that works without any dependencies. It's designed to be easy to use and highly customizable, allowing you to create stylish and functional alert popups for your website or application.">
+    <meta name="twitter:url" content="https://smallvi.github.io/yoyoPopup/">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:image:alt"
+        content="A demo of Yoyo Popup">
+
+    <link rel="canonical" href="https://smallvi.github.io/yoyoPopup/">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yoyo Popup</title>
@@ -28,7 +52,7 @@
         <h1 style="margin-bottom: 80px;">Yoyo Popup</h1>
         <img class="floating-image" src="./images/yoyo_popup.png" style="margin-bottom: 50px;">
         <button class="github-btn" style="margin-bottom: 50px;">
-            <a href="https://github.com/smallvi/yoyo_popup" target="_blank" class="github-link"
+            <a href="https://github.com/smallvi/yoyoPopup" target="_blank" class="github-link"
                 style="text-decoration: none;">
                 <div style="display:flex;">
                     <svg fill="white" style="width:1.5rem;height:1.5rem" viewBox="0 0 496 512">
