--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
         content="Yoyo Popup is a customizable alert popup plugin that works without any dependencies. It's designed to be easy to use and highly customizable, allowing you to create stylish and functional alert popups for your website or application.">
     <meta name="twitter:url" content="https://smallvi.github.io/yoyoPopup/">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:image:alt"
-        content="A demo of Yoyo Popup">
+    <meta name="twitter:image:alt" content="A demo of Yoyo Popup">
 
     <link rel="canonical" href="https://smallvi.github.io/yoyoPopup/">
 
@@ -170,11 +169,8 @@
         <footer style="padding: 50px;color: white;">© 2024 Zi Wei Yeo</footer>
     </div>
 
-    <script src="yoyo-popup.min.js"></script>
+    <script src="./dist/yoyoPopup.min.js"></script>
     <script src="scripts.js"></script>
 </body>
-<script>
-
-</script>
 
 </html>
