chore: try es6 module

--- a/index_es6.html
+++ b/index_es6.html
@@ -170,7 +170,7 @@
     </div>
 
     <script type="module">
-        import { showYoyoPopup } from '/dist/yoyoPopup.min.mjs';
+        import { showYoyoPopup } from './dist/yoyoPopup.min.mjs';
         showYoyoPopup({
             text: 'Created Successfull',
             type: 'success',
