chore: set redirecting to demo page

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <title>Redirecting...</title>
+</head>
+
 <body>
-    <script src="./dist/yoyoPopup.min.js"></script>
+    <p>Redirecting...</p>
+
     <script>
-        showYoyoPopup({
-            text: 'Created Successfull',
-            type: 'success',
-            timeOut: 5000,
-        });
+        setTimeout(function () {
+            window.location.href = "https://smallvi.github.io/projects/yoyoPopup/";
+        }, 0);
     </script>
 </body>
 
